--- a/style.css
+++ b/style.css
@@ -1,3 +1,3 @@
-body {font-family: courier}
-.subtitle {color: #456453}
-#masthead {text-align: center}
+body {font-family: century; text-align: center; background-color: #fff2e6}
+.subtitle {color: #0066ff; text-align: center}
+#maplink {font-size: 1.5em}
