--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
 body {font-family: century; text-align: center; background-color: #fff2e6}
 #subtitle {color: #0066ff; text-align: center}
 .maplink {font-size: 1.5em}
-.image {width: 500; height: 250}
+.image {width: 500px; height: 250px}
